Rename 100-level professional series and titles.

--- a/course_descriptions/121-122-123-124.md
+++ b/course_descriptions/121-122-123-124.md
@@ -1,4 +1,4 @@
-# Aprrenticeship Series I
+# Professional Immersion Series I
 
 TODO: general description of the sequence, outcomes, etc
 
@@ -8,17 +8,17 @@ TODO: general description of the sequence, outcomes, etc
 TODO: description & outcomes
 
 ## SE 122
-### Professional Seminar
+### Apprenticeship I
 
 TODO: description & outcomes
 
 ## SE 123
-### Professional Seminar
+### Apprenticeship I
 
 TODO: description & outcomes
 
 ## SE 124
-### Professional Seminar
+### Professional Immersion I
 
 TODO: description & outcomes
 
